--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
           </div>
           <div class="list-items">
             <ul class="list">
-              <!-- <li class="item">
-                      <div class="item-1">
-                        <img src="imgs/To-Do-Img/images/unchecked.png" alt="" />
-                        <p>list-1</p>
-                      </div>
-                      <div class="remove">
-                        <button>x</button>
-                      </div>
-                    </li> -->
+              <li class="item">
+                <div class="item-1">
+                  <div class="img-status"></div>
+                  <p>list-1</p>
+                </div>
+                <div class="remove">
+                  <button>x</button>
+                </div>
+              </li>
             </ul>
           </div>
         </div>
