--- a/index.html
+++ b/index.html
@@ -18,17 +18,7 @@
             <button class="add-btn">Add</button>
           </div>
           <div class="list-items">
-            <ul class="list">
-              <li class="item">
-                <div class="item-1">
-                  <div class="img-status"></div>
-                  <p>list-1</p>
-                </div>
-                <div class="remove">
-                  <button>x</button>
-                </div>
-              </li>
-            </ul>
+            <ul class="list"></ul>
           </div>
         </div>
       </div>
