--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-      <!-- <div class="toDoList">
+      <div class="toDoList">
         <div class="container">
           <h2>
             To-Do-List <img src="imgs/To-Do-Img/images/icon.png" alt="" />
@@ -21,15 +21,19 @@
             <ul class="list"></ul>
           </div>
         </div>
-      </div> -->
+      </div>
       <div class="notes-container">
         <h2><img src="imgs/notes-app-img/images/notes.png" alt="" /> Notes</h2>
-        <button>
+        <button class="addNote">
           <img src="imgs/notes-app-img/images/edit.png" alt="" /> Add note
         </button>
         <div class="notes">
           <p class="input-box" contenteditable="true">
-            <img src="imgs/notes-app-img/images/delete.png" alt="" />
+            <img
+              class="delNote"
+              src="imgs/notes-app-img/images/delete.png"
+              alt=""
+            />
           </p>
         </div>
       </div>
